20190326 JPS/JSTAT JVM Command